# rails-api/app/controllers/admin/projects_controller.rb
@@ -2,12 +2,13 @@ class Admin::ProjectsController < ApplicationController
   before_action :set_project, only: %i[show update destroy]
 
   has_scope :by_query
+  has_scope :by_created_by
   has_scope :by_sort, using: %i[column direction], type: :hash
 
   # GET /admin/projects
   def index
-    @projects = policy_scope(Project).paginate(page: params[:page])
-    @projects = apply_scopes(@projects).all
+    @projects = authorize policy_scope(Project)
+    @projects = apply_scopes(@projects).paginate(page: params[:page])
 
     render json: @projects,
            meta: pagination_dict(@projects),
